<resources>
    <string name="max_number_of_camera">2</string>
    <string name="pref_focus_mode_default">continuous-picture</string>
    <string name="focus_mode_auto">Auto</string>
    <string name="focus_mode_infinity">Infinity</string>
    <string name="focus_mode_macro">Macro</string>
    <string name="focus_mode_title">Focus mode</string>
    <string name="pref_flash_mode_device_no_flash">no_flash</string>
    <string name="pref_flash_mode_camera_default">auto</string>
    <string name="pref_flash_mode_video_default">off</string>
    <string name="flash_mode_camera_auto">Auto</string>
    <string name="flash_mode_camera_on">On</string>
    <string name="flash_mode_camera_off">Off</string>
    <string name="flash_mode_camera_light">Light</string>
    <string name="flash_mode_camera_title">Flash</string>
    <string name="pref_camera_id_default">0</string>
    <string name="camera_id_back">Rear</string>
    <string name="camera_id_front">Front</string>
    <string name="camera_id_title">Switch</string>
    <string name="pref_effect_group_default">pref_effect_none</string>
    <string name="effect_group_title">Effects</string>
    <string name="pref_effect_none_default">off</string>
    <string name="effect_none_on">On</string>
    <string name="effect_none_off">Off</string>
    <string name="effect_none_title">None</string>
    <string name="pref_effect_water_color_pencil_default">off</string>
    <string name="effect_water_color_pencil_on">On</string>
    <string name="effect_water_color_pencil_off">Off</string>
    <string name="effect_water_color_pencil_title">Watercolor</string>
    <string name="pref_effect_cartoon_default">off</string>
    <string name="effect_cartoon_on">On</string>
    <string name="effect_cartoon_off">Off</string>
    <string name="effect_cartoon_title">Cartoon</string>
    <string name="pref_effect_poster_color_default">off</string>
    <string name="effect_poster_color_on">On</string>
    <string name="effect_poster_color_off">Off</string>
    <string name="effect_poster_color_title">Poster color</string>
    <string name="pref_effect_poster_b_n_w_default">off</string>
    <string name="effect_poster_b_n_w_on">On</string>
    <string name="effect_poster_b_n_w_off">Off</string>
    <string name="effect_poster_b_n_w_title">Poster B/W</string>
    <string name="pref_effect_dot_color_default">off</string>
    <string name="effect_dot_color_on">On</string>
    <string name="effect_dot_color_off">Off</string>
    <string name="effect_dot_color_title">Dot color</string>
    <string name="pref_effect_dot_b_n_w_default">off</string>
    <string name="effect_dot_b_n_w_on">On</string>
    <string name="effect_dot_b_n_w_off">Off</string>
    <string name="effect_dot_b_n_w_title">Dot B/W</string>
    <string name="pref_effect_neon_default">off</string>
    <string name="effect_neon_on">On</string>
    <string name="effect_neon_off">Off</string>
    <string name="effect_neon_title">Neon</string>
    <string name="pref_effect_embossing_default">off</string>
    <string name="effect_embossing_on">On</string>
    <string name="effect_embossing_off">Off</string>
    <string name="effect_embossing_title">Embossing</string>
    <string name="pref_effect_color_tone_default">none</string>
    <string name="effect_color_tone_none">None</string>
    <string name="effect_color_tone_mono">Grayscale</string>
    <string name="effect_color_tone_sepia">Sepia</string>
    <string name="effect_color_tone_aqua">Aqua</string>
    <string name="effect_color_tone_title">Color tone</string>
    <string name="pref_effect_color_extraction_default">off</string>
    <string name="effect_color_extraction_off">None</string>
    <string name="effect_color_extraction_touch">Touch</string>
    <string name="effect_color_extraction_red">Red</string>
    <string name="effect_color_extraction_green">Green</string>
    <string name="effect_color_extraction_blue">Blue</string>
    <string name="effect_color_extraction_yellow">Yellow</string>
    <string name="effect_color_extraction_title">Color point</string>
    <string name="pref_mode_group_default">pref_mode_normal</string>
    <string name="mode_group_title">Mode</string>
    <string name="pref_modes_menu_type_default">list</string>
    <string name="modes_menu_type_list">List</string>
    <string name="modes_menu_type_grid">Grid</string>
    <string name="modes_menu_type_title">Modes Menu Type</string>
    <string name="pref_mode_normal_default">off</string>
    <string name="mode_normal_on">On</string>
    <string name="mode_normal_off">Off</string>
    <string name="mode_normal_title">Auto</string>
    <string name="mode_normal_tip_text">Take pictures with automatic settings.</string>
    <string name="pref_mode_intelligent_default">off</string>
    <string name="mode_intelligent_off">Off</string>
    <string name="mode_intelligent_auto">Auto</string>
    <string name="mode_intelligent_macro">Macro</string>
    <string name="mode_intelligent_outdoor">Outdoor</string>
    <string name="mode_intelligent_indoor">Indoor</string>
    <string name="mode_intelligent_sunset">Sunset</string>
    <string name="mode_intelligent_night">Night</string>
    <string name="mode_intelligent_portrait">Portrait</string>
    <string name="mode_intelligent_flare_portrait">Flare portrait</string>
    <string name="mode_intelligent_night_portrait">Night portrait</string>
    <string name="mode_intelligent_group_portrait">Group portrait</string>
    <string name="mode_intelligent_title">Intelligent</string>
    <string name="mode_intelligent_auto_tip">Take optimized pictures with the least amount of adjustment recognizing surrounding conditions automatically.</string>
    <string name="mode_intelligent_macro_tip">Take pictures of close objects clearly.</string>
    <string name="mode_intelligent_outdoor_tip">Take lansdscape pictures clearly.</string>
    <string name="mode_intelligent_indoor_tip">Take pictures by making light suit for indoor to get brighter pictures.</string>
    <string name="mode_intelligent_sunset_tip">Take pictures of sky with richer colors that emphasize the red colors of sunset.</string>
    <string name="mode_intelligent_night_tip">Take pictures brighter and clearer at night and in low light without flash.</string>
    <string name="mode_intelligent_portrait_tip">Corrects facial imperfection automatically so that you can achieve bright and clear portraits.</string>
    <string name="mode_intelligent_flare_portrait_tip">Take portrait pictures against the backlight properly by adjusting exposure automatically.</string>
    <string name="mode_intelligent_night_portrait_tip">Take portrait pictures brighter at night and in low light by adjusting exposure automatically.</string>
    <string name="mode_intelligent_group_portrait_tip">Take pictures with Best face mode to select the best face when capturing group photos.</string>
    <string name="pref_mode_best_face_default">off</string>
    <string name="mode_best_face_on">On</string>
    <string name="mode_best_face_off">Off</string>
    <string name="mode_best_face_title">Best face</string>
    <string name="mode_best_face_tip_text">Take 5 consecutive pictures and select the best face for each person to get best possible image.</string>
    <string name="pref_mode_remote_default">off</string>
    <string name="mode_remote_on">On</string>
    <string name="mode_remote_off">Off</string>
    <string name="mode_remote_title">Remote</string>
    <string name="mode_remote_tip_text">Take pictures remotely with connected other mobile phone by touching back to back.</string>
    <string name="pref_mode_self_default">off</string>
    <string name="mode_self_on">On</string>
    <string name="mode_self_off">Off</string>
    <string name="mode_self_title">Self shot</string>
    <string name="mode_self_tip_text">Take high-resolution self portraits easily by touching the screen.</string>
    <string name="pref_mode_hdr_default">off</string>
    <string name="mode_hdr_on">On</string>
    <string name="mode_hdr_off">Off</string>
    <string name="mode_hdr_title">HDR</string>
    <string name="mode_hdr_tip_text">Take and merge pictures in various exposures to get pictures without too bright or dark areas.</string>
    <string name="pref_mode_beauty_default">off</string>
    <string name="mode_beauty_on">On</string>
    <string name="mode_beauty_off">Off</string>
    <string name="mode_beauty_title">Beauty</string>
    <string name="mode_beauty_tip_text">Corrects facial blemishes automatically and take brighter pictures when taking portrait pictures.</string>
    <string name="pref_mode_text_default">off</string>
    <string name="mode_text_off">Off</string>
    <string name="mode_text_color">Color</string>
    <string name="mode_text_mono">B/W</string>
    <string name="mode_text_board">Black Board</string>
    <string name="mode_text_title">Note</string>
    <string name="mode_text_color_tip">Capture colorful text clearly.</string>
    <string name="mode_text_mono_tip">Clearly capture text in white and black.</string>
    <string name="mode_text_board_tip">Capture text written on the blackboard clearly.</string>
    <string name="pref_mode_panorama_default">off</string>
    <string name="mode_panorama_on">On</string>
    <string name="mode_panorama_off">Off</string>
    <string name="mode_panorama_title">Panorama</string>
    <string name="mode_panorama_tip_text">With pressed shutter button slowly move to left and right to take panoramic pictures.</string>
    <string name="pref_mode_video_timelapse_default">0</string>
    <string name="mode_video_timelapse_0">Off</string>
    <string name="mode_video_timelapse_300">Step 1</string>
    <string name="mode_video_timelapse_1000">Step 2</string>
    <string name="mode_video_timelapse_5000">Step 3</string>
    <string name="mode_video_timelapse_title">High Speed</string>
    <string name="edit">Edit</string>
    <string name="transfer">Share</string>
    <string name="delete">Delete</string>
    <string name="facetagging">Face Tag</string>
    <string name="share">Share</string>
    <string name="Import">Import</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="crop_action">Crop</string>
    <string name="set_image">Set picture as</string>
    <string name="details">Details</string>
    <string name="show_on_map">Show on map</string>
    <string name="undo">Undo</string>
    <string name="spinner_1_size">Resolution:</string>
    <string name="spinner_1_size_prompt">Choose a Resolution</string>
    <string name="spinner_2_shuttersound">Shutter Sound:</string>
    <string name="spinner_2_shuttersound_prompt">Choose a Shutter Sound</string>
    <string name="spinner_3_wb">White Balance:</string>
    <string name="spinner_3_wb_prompt">Choose a White Balance</string>
    <string name="spinner_4_flash">Flash:</string>
    <string name="spinner_4_flash_prompt">Choose a flash</string>
    <string name="tuto_third_text_01">For stable connection</string>
    <string name="tuto_third_text_02">If both phones are not connected firmly, please turn the Wi-Fi setting Off and on.</string>
    <string name="tuto_third_text_03">Do not change Wi-Fi setting while connected. May be disconnected.</string>
    <string name="tuto_third_text_04">If there is a big wall between the two smart phones, or the communication distance is too far then the Connection may be released.</string>
    <string name="tuto_third_text_05">When you terminate the application or change the mode, the connection is stopped.</string>
    <string name="tuto_prev">Back</string>
    <string name="tuto_complete">OK</string>
    <string name="third_page_num">3 / 3</string>
    <string name="tips_photoview_title">Photo view</string>
    <string name="tips_photoview_sub">By dragging to the left of the screen review taken pictures on it.</string>
</resources>