<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/action_import" android:visible="false" android:title="@string/Import" android:showAsAction="always|withText" />
    <item android:icon="@drawable/camera_icon_preview_share_default" android:id="@id/action_share" android:visible="false" android:title="@string/share" android:showAsAction="ifRoom" android:actionProviderClass="android.widget.ShareActionProvider" />
    <item android:icon="@drawable/camera_icon_preview_delete_default" android:id="@id/action_delete" android:visible="false" android:title="@string/delete" android:showAsAction="ifRoom" />
    <item android:id="@id/action_edit" android:visible="false" android:title="@string/edit" android:showAsAction="never" />
    <item android:id="@id/action_rotate_ccw" android:visible="false" android:title="@string/rotate_left" android:showAsAction="never" />
    <item android:id="@id/action_rotate_cw" android:visible="false" android:title="@string/rotate_right" android:showAsAction="never" />
    <item android:id="@id/action_crop" android:visible="false" android:title="@string/crop_action" android:showAsAction="never" />
    <item android:id="@id/action_setas" android:visible="false" android:title="@string/set_image" android:showAsAction="never" />
    <item android:icon="@drawable/info_icon" android:id="@id/action_details" android:visible="false" android:title="@string/details" android:showAsAction="never" />
    <item android:id="@id/action_show_on_map" android:visible="false" android:title="@string/show_on_map" android:showAsAction="never" />
</menu>