<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spinner_1_size" />
    <Spinner android:id="@id/pst_size" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:prompt="@string/spinner_1_size_prompt" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spinner_2_shuttersound" />
    <Spinner android:id="@id/pst_shuttersound" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:prompt="@string/spinner_2_shuttersound_prompt" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spinner_3_wb" />
    <Spinner android:id="@id/pst_wb" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:prompt="@string/spinner_3_wb_prompt" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spinner_4_flash" />
    <Spinner android:id="@id/pst_flash" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:prompt="@string/spinner_4_flash_prompt" />
</LinearLayout>