<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/camera_tip_photoview_portrait" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/photoview_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="138.0dip">
        <TextView android:textSize="@dimen/tips_title_textsize" android:textColor="@color/tips_title_color" android:id="@id/photoview_title" android:layout_width="280.0dip" android:layout_height="wrap_content" android:text="@string/tips_photoview_title" android:shadowColor="@color/tips_title_shadow_color" android:shadowDx="0.0" android:shadowDy="1.0" android:shadowRadius="1.0" />
        <TextView android:textSize="@dimen/tips_sub_textsize" android:textColor="@color/tips_sub_color" android:id="@id/photoview_sub" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/tips_photoview_sub" android:layout_below="@id/photoview_title" android:layout_alignLeft="@id/photoview_title" android:lineSpacingExtra="3.0dip" />
    </RelativeLayout>
    <ImageView android:id="@id/photoview_image_upper" android:background="@drawable/camera_tutorial_photoview_03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/photoview_text" android:layout_alignLeft="@id/photoview_text" />
    <FrameLayout android:id="@id/photoview_lower" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/photoview_image_upper" android:layout_alignLeft="@id/photoview_text">
        <ImageView android:id="@id/photoview_image_lower" android:background="@drawable/camera_tutorial_photoview_04" android:layout_width="275.0dip" android:layout_height="wrap_content" />
        <TextView android:textSize="5.0dip" android:textColor="@color/tips_sub_color" android:gravity="center" android:id="@id/facetags_text" android:layout_width="28.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-2.0dip" android:layout_marginTop="30.0dip" android:text="@string/facetagging" />
        <TextView android:textSize="5.0dip" android:textColor="@color/tips_sub_color" android:gravity="center" android:id="@id/share_text" android:layout_width="28.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-2.0dip" android:layout_marginTop="70.0dip" android:text="@string/transfer" />
        <TextView android:textSize="5.0dip" android:textColor="@color/tips_sub_color" android:gravity="center" android:id="@id/delete_text" android:layout_width="28.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-2.0dip" android:layout_marginTop="110.0dip" android:text="@string/delete" />
        <TextView android:textSize="5.0dip" android:textColor="@color/tips_sub_color" android:gravity="center" android:id="@id/edit_text" android:layout_width="28.0dip" android:layout_height="wrap_content" android:layout_marginLeft="-2.0dip" android:layout_marginTop="150.0dip" android:text="@string/edit" />
        <TextView android:textSize="5.0dip" android:textColor="@color/tips_sub_color" android:gravity="center" android:id="@id/undo_text" android:layout_width="30.0dip" android:layout_height="wrap_content" android:layout_marginLeft="244.0dip" android:layout_marginTop="150.0dip" android:text="@string/undo" />
    </FrameLayout>
</RelativeLayout>